--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,6 +1,6 @@
 /*** general styling */
 .ui-page.ui-body-c{
-background:url(images/bg.png);
+background:url(/images/bg.png);
 box-shadow:  0px 0px 30px 5px rgba(107, 105, 105, 0.3) inset,
  0px 0px 0px 1px rgba(107, 105, 105, 0.4) inset;
 
@@ -57,12 +57,12 @@ box-sizing: border-box;
 
 /* title bar */
 .ui-header.ui-bar-a{
-background:url(images/header_bg.png);
+background:url(/images/header_bg.png);
 }
 .ui-header .ui-title {
 text-indent:-9999px;
 font-size:0px;
-background:url(images/header_logo.png) no-repeat 69% 5px ;
+background:url(/images/header_logo.png) no-repeat 69% 5px ;
 height:33px;
 padding:5px 0 5px 50px;
 margin:0px;
@@ -83,7 +83,7 @@ box-shadow:none;
 /*** home **/
 
 #branding{
-background:url(images/logo.png) no-repeat;
+background:url(/images/logo.png) no-repeat;
 width:322px;
 height:165px;
 text-indent:-999px;
@@ -99,7 +99,7 @@ color:rgb(65, 38, 37);
 font-weight:normal;
 font-style:italic;
 padding:5px 0 6px 50px;
-background:url(images/pagination.png) no-repeat;
+background:url(/images/pagination.png) no-repeat;
 }
 
 #home .choice_list h1{
@@ -145,7 +145,7 @@ color:rgb(63, 41, 39);
 
 #choisir_restau .classement{
 display:inline-bloc;
-background:url(images/pagination.png) no-repeat  0 -182px;
+background:url(/images/pagination.png) no-repeat  0 -182px;
 height:22px;
 text-indent:-999px;
 font-size:0px;
@@ -209,10 +209,10 @@ color:rgb(63, 41, 39);
 }
 
 .ui-icon-maps {
-background: rgb(63, 41, 39) url(images/maps.png) no-repeat;
+background: rgb(63, 41, 39) url(/images/maps.png) no-repeat;
 }
 .ui-icon-tel{
-background: rgb(63, 41, 39) url(images/phone.png) no-repeat;
+background: rgb(63, 41, 39) url(/images/phone.png) no-repeat;
 }
 
 /** add the stars to the drop down */
@@ -222,7 +222,7 @@ position:relative;
 }
 
 #note_utilisateur-button span.ui-btn-text{
-background:url(images/pagination.png) no-repeat;
+background:url(/images/pagination.png) no-repeat;
 } 
 
 #note_utilisateur-button span.ui-btn-inner{
@@ -234,7 +234,7 @@ content: "   ";
 display:inline-block;
 width:115px;
 height:20px;
-background:url(images/pagination.png) no-repeat;
+background:url(/images/pagination.png) no-repeat;
 position:absolute;
 left:0px;
 }
