--- a/public/css/jquery.mobile-1.0.1.css
+++ b/public/css/jquery.mobile-1.0.1.css
@@ -850,7 +850,7 @@ a.ui-link-inherit {
 .ui-icon-searchfield:after {
 	background: 						#666 /*{global-icon-color}*/;
 	background: 						rgba(0,0,0,.4) /*{global-icon-disc}*/;
-	background-image: url(images/icons-18-white.png) /*{global-icon-set}*/;
+	background-image: url(/images/icons-18-white.png) /*{global-icon-set}*/;
 	background-repeat: no-repeat;
 	-moz-border-radius: 				9px;
 	-webkit-border-radius: 				9px;
@@ -864,7 +864,7 @@ a.ui-link-inherit {
 .ui-icon-alt {
 	background: 						#fff;
 	background: 						rgba(255,255,255,.3);
-	background-image: url(images/icons-18-black.png);
+	background-image: url(/images/icons-18-black.png);
 	background-repeat: no-repeat;
 }
 
@@ -984,7 +984,7 @@ a.ui-link-inherit {
 
 /* loading icon */
 .ui-icon-loading {
-	background-image: url(images/ajax-loader.png);
+	background-image: url(/images/ajax-loader.png);
 	width: 40px;
 	height: 40px;
 	-moz-border-radius: 20px;
