--- a/templates/restaurant_picker/index.tmpl
+++ b/templates/restaurant_picker/index.tmpl
@@ -16,7 +16,7 @@
 	<li><a href="/demos/restaurant_picker/choose_town" data-transition="slidedown"> <img src="/images/sushis.jpg"/> <h3> Some Sushis</h3></a></li>
 	<li><a href="/demos/restaurant_picker/choose_town"  data-transition="slidedown"> <img src="/images/pizza.jpg"/> <h3> A Pizza </h3></a></li>
 	<li><a href="/demos/restaurant_picker/choose_town"  data-transition="slidedown"> <img src="/images/kebap.jpg"/> <h3> A Kebap</h3></a></li>
-	<li><a href="choose_town.html"  data-transition="slidedown"> <img src="/images/burger.jpg"/> <h3> A Burger</h3></a></li>
+	<li><a href="/demos/restaurant_picker/choose_town"  data-transition="slidedown"> <img src="/images/burger.jpg"/> <h3> A Burger</h3></a></li>
 	<li><a href="/demos/restaurant_picker/choose_town"  data-transition="slidedown"> <img src="/images/nems.jpg"/> <h3> Some Nems </h3></a></li>
 	<li><a href="/demos/restaurant_picker/choose_town"  data-transition="slidedown"> <img src="/images/tradi.jpg"/> <h3> Something more traditional</h3></a></li>	
 	</ul>	
